# ai-talent-matching-agent

./: .env.example  .gitignore  README.md  USAGE.md  app.py  config.yaml  interactive_cli.py  pyproject.toml  setup.py
src/: __init__.py  matching_agent.py
templates/: index.html
tests/: __init__.py  test_matching_agent.py
